# SpikeFlow

./: .gitignore  README.md  plot_headline.py  pyproject.toml  run_config_sweep.py  run_fc_gate_checks.py  run_finite_diff_gate.py  run_gate_b.py  run_gate_b_conv.py  run_torch_gate.py  run_toy_w2.py
spikeflow/: __init__.py  adjoint.py  cache_guard.py  conv_event_identity.py  conv_params.py  fc_params.py  finite_diff.py  forward.py  forward_sensitivity.py  gate_b_sweep.py  gate_metrics.py  gate_protocols.py  generation.py  params.py  sampling.py  theorem2.py  torch_core.py  torch_module.py  train.py  trajectory_metrics.py
tests/: test_conv_event_count_replay_stable.py  test_event_count_replay_stable.py  test_no_cross_step_cache.py
